--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js"
   },
-  "author": "",
+  "author": "Fernanda Sesnick",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
